tests/ui/expr/implication/feature-gate-implication-op.stderr
error[E0658]: the `==>` operator is experimental
  --> $DIR/feature-gate-implication-op.rs:2:18
   |
LL |     let x = true ==> false;
   |                  ^^^
   |
   = help: add `#![feature(implication_op)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
