tests/ui/expr/implication/feature-gate-implication-op.rs
fn main() {
    let x = true ==> false;
    //~^ ERROR: the `==>` operator is experimental
}
